# project-template

./: .env.template  .gitignore  README.md  pyproject.toml  requirements.txt  shell.nix
.github/workflows/: ci.yaml
config/: airtable.yaml
logs/: README.md
scripts/: pack-venv.sh
src/logger/: config.yaml  logger.py
src/logging/: config.yaml  formatter.py  logger.py
src/utils/: airtable.py  utils.py
